[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.14"
scraper = "0.14.0"
http = "0.2.8"
fern = "0.6.1"
log = "0.4.17"
chrono = "0.4.23"