[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.14"
scraper = "0.14.0"
http = "0.2.8"
serde = "1.0.152"
once_cell = "1.17.0"

# 単体テストでfixtureを使用したい場合
# rstest = "0.16.0"